// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`SwitchButton 순환·머무름·비활성을 구분해 렌더한다 1`] = `
"<div aria-label="다음으로" class="display-0-flex--0 flex-direction-0-column--0 box-sizing-0-border-box--255 flex-0-1--255 gap-0-0--255 justify-content-0-center--255 overflow-0-hidden--255 padding-right-0-4px--255 padding-left-0-4px--255 background-0-$scanCursorBg--255 border-color-0-$scanCursor--255 border-radius-0-14px--255 border-style-0-solid--255 border-width-0-5px--255 color-0-$scanCursorText--255 grid-column-0-auto--255 min-height-0-60px--255">
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="typo-switchLabel">
      &gt;
    </span>
  </div>
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="line-height-0-1.2--255 typo-caption">
      다음으로
    </span>
  </div>
</div>"
`;

exports[`SwitchButton 순환·머무름·비활성을 구분해 렌더한다 2`] = `
"<div aria-label="다음으로" class="display-0-flex--0 flex-direction-0-column--0 box-sizing-0-border-box--255 flex-0-1--255 gap-0-0--255 justify-content-0-center--255 overflow-0-hidden--255 padding-right-0-4px--255 padding-left-0-4px--255 background-0-$scanCursorBg--255 border-color-0-$scanCursor--255 border-radius-0-14px--255 border-style-0-dashed--255 border-width-0-5px--255 color-0-$scanCursorText--255 grid-column-0-auto--255 min-height-0-60px--255">
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="typo-switchLabel">
      &gt;
    </span>
  </div>
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="line-height-0-1.2--255 typo-caption">
      한 번 더
    </span>
  </div>
</div>"
`;

exports[`SwitchButton 순환·머무름·비활성을 구분해 렌더한다 3`] = `
"<div aria-label="이전으로" class="display-0-flex--0 flex-direction-0-column--0 box-sizing-0-border-box--255 flex-0-1--255 gap-0-0--255 justify-content-0-center--255 overflow-0-hidden--255 padding-right-0-4px--255 padding-left-0-4px--255 background-0-$scanIdleBg--255 border-color-0-$border--255 border-radius-0-14px--255 border-style-0-solid--255 border-width-0-2px--255 color-0-$scanIdleText--255 grid-column-0-auto--255 min-height-0-60px--255">
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="typo-switchLabel">
      &lt;
    </span>
  </div>
</div>"
`;

exports[`SwitchButton 앱별 칸은 기본 칸과 다르게 그린다 1`] = `
"<div aria-label="페이지 넘기기" class="display-0-flex--0 flex-direction-0-column--0 box-sizing-0-border-box--255 flex-0-1--255 gap-0-0--255 justify-content-0-center--255 overflow-0-hidden--255 padding-right-0-4px--255 padding-left-0-4px--255 background-0-$scanIdleBg--255 border-color-0-$border--255 border-radius-0-14px--255 border-style-0-solid--255 border-width-0-2px--255 color-0-$scanIdleText--255 grid-column-0-auto--255 min-height-0-60px--255">
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="typo-switchLabel">
      다음 장
    </span>
  </div>
</div>"
`;

exports[`SwitchButton 앱별 칸은 기본 칸과 다르게 그린다 2`] = `
"<div aria-label="페이지 넘기기" class="display-0-flex--0 flex-direction-0-column--0 box-sizing-0-border-box--255 flex-0-1--255 gap-0-0--255 justify-content-0-center--255 overflow-0-hidden--255 padding-right-0-4px--255 padding-left-0-4px--255 background-0-$extraIdleBg--255 border-color-0-$extraBorder--255 border-radius-0-8px--255 border-style-0-solid--255 border-width-0-2px--255 color-0-$scanIdleText--255 grid-column-0-auto--255 min-height-0-60px--255">
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="typo-switchLabel">
      다음 장
    </span>
  </div>
</div>"
`;

exports[`SwitchButton 설정 칸은 낮게 그린다 1`] = `
"<div aria-label="설정 열기" class="display-0-flex--0 flex-direction-0-column--0 box-sizing-0-border-box--255 flex-0-1--255 gap-0-0--255 justify-content-0-center--255 overflow-0-hidden--255 padding-right-0-4px--255 padding-left-0-4px--255 background-0-$scanCursorBg--255 border-color-0-$scanCursor--255 border-radius-0-14px--255 border-style-0-solid--255 border-width-0-5px--255 color-0-$scanCursorText--255 grid-column-0-auto--255 min-height-0-48px--255">
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="typo-switchLabel">
      설정
    </span>
  </div>
</div>"
`;

exports[`SwitchButton 마지막 홀수 칸은 한 줄을 통째로 쓴다 1`] = `
"<div aria-label="이전 곡으로" class="display-0-flex--0 flex-direction-0-column--0 box-sizing-0-border-box--255 flex-0-1--255 gap-0-0--255 justify-content-0-center--255 overflow-0-hidden--255 padding-right-0-4px--255 padding-left-0-4px--255 background-0-$scanIdleBg--255 border-color-0-$border--255 border-radius-0-14px--255 border-style-0-solid--255 border-width-0-2px--255 color-0-$scanIdleText--255 grid-column-0-span 2--255 min-height-0-60px--255">
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="typo-switchLabel">
      이전 곡
    </span>
  </div>
</div>"
`;

exports[`UndoPanel 되돌리기 창을 렌더한다 1`] = `
"<div class="display-0-flex--0 flex-direction-0-column--0 background-0-$undoBg--255 border-color-0-$undoText--255 border-radius-0-14px--255 border-style-0-solid--255 border-width-0-5px--255 box-sizing-0-border-box--255 color-0-$undoText--255 flex-0-1--255 gap-0-2px--255 justify-content-0-center--255 min-height-0-0--255 overflow-0-hidden--255 padding-right-0-8px--255 padding-left-0-8px--255">
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="typo-switchLabel">
      되돌리기
    </span>
  </div>
  <div class="display-0-flex--0 justify-content-0-center--0 align-items-0-center--0">
    <span class="typo-caption">
      3초 안에 누르면 되돌립니다
    </span>
  </div>
</div>"
`;
